fixed drop down menu alignment. pulled changes also showing up? (#42)

--- a/client/src/components/NavBar/style.css
+++ b/client/src/components/NavBar/style.css
@@ -15,16 +15,16 @@
     font-size: 17px;
 }
 
-.nav-link-dark {
-    color: rgb(0, 0, 0);
-    margin-left: 10px;
-    margin-right: 10px;
-    font-family: 'Pontano Sans', sans-serif;
-    font-size: 17px;
-}
-
 .nav-link:hover {
     color: rgb(0, 0, 0);
+}
+
+.nav-link-dark {
+    color: rgb(0, 0, 0);
+    /* margin-left: 10px;
+    margin-right: 10px; */
+    font-family: 'Pontano Sans', sans-serif;
+    font-size: 17px;
 }
 
 .nav-link-dark:hover {
